--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <nav>
         <a href="/">홈</a>
-        <a href="/공간여백/">공간여백</a>
-        <a href="/공간소개/">공간소개</a>
-        <a href="/예약안내/">예약안내</a>
-        <a href="/이용안내/">이용안내</a>
-        <a href="/갤러리/">갤러리</a>
-        <a href="/공지사항/">공지사항</a>
-        <a href="/스토어/">스토어</a>
+        <a href="/spaceyb/공간여백/">공간여백</a>
+        <a href="/spaceyb/공간소개/">공간소개</a>
+        <a href="/spaceyb/예약안내/">예약안내</a>
+        <a href="/spaceyb/이용안내/">이용안내</a>
+        <a href="/spaceyb/갤러리/">갤러리</a>
+        <a href="/spaceyb/공지사항/">공지사항</a>
+        <a href="/spaceyb/스토어/">스토어</a>
     </nav>
     <h1>홈</h1>
     <p>홈 페이지입니다.</p>
